added shared library lab code (TAG: shared_library_lab_complete)

--- a/booktracker/tsconfig.json
+++ b/booktracker/tsconfig.json
@@ -22,6 +22,10 @@
       "book-library": [
         "dist/book-library/book-library",
         "dist/book-library"
+      ],
+      "reader-library": [
+        "dist/reader-library/reader-library",
+        "dist/reader-library"
       ]
     }
   }
