--- a/booktracker/package.json
+++ b/booktracker/package.json
@@ -20,15 +20,16 @@
     "@angular/platform-browser": "9.1.1",
     "@angular/platform-browser-dynamic": "9.1.1",
     "@angular/router": "9.1.1",
-    "rxjs": "6.5.4",
-    "tslib": "1.10.0",
-    "zone.js": "0.10.2",
+    "@ngrx/store": "^9.1.0",
     "body-parser": "1.19.0",
     "bootstrap": "3.4.1",
     "core-js": "3.6.5",
     "express": "4.17.1",
     "morgan": "1.10.0",
-    "serve-favicon": "2.5.0"
+    "rxjs": "6.5.4",
+    "serve-favicon": "2.5.0",
+    "tslib": "1.10.0",
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.901.1",
