--- a/booktracker/package.json
+++ b/booktracker/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "9.1.1",
     "@angular/router": "9.1.1",
     "@ngrx/store": "^9.1.0",
+    "@ngrx/store-devtools": "^9.1.0",
     "body-parser": "1.19.0",
     "bootstrap": "3.4.1",
     "core-js": "3.6.5",
