added books, readers, shared modules, refactored add edit components

--- a/booktracker/angular.json
+++ b/booktracker/angular.json
@@ -116,6 +116,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "booktracker"
+    }
+  },
+  "defaultProject": "booktracker",
+  "cli": {
+    "analytics": false
+  }
 }
